# agentrail

./: .dockerignore  .env.example  .env.sandbox.example  .gitignore  .npmignore  .spectral.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODO.md  agentrail  compose.yaml  docker-compose.yml  openapitools.json  package-lock.json  package.json  railway.toml  tsconfig.build.json  tsconfig.json  vercel.json
adapters/github-adapter/python-sdk/: README.md  pyproject.toml
adapters/github-adapter/python-sdk/agentrail/: __init__.py  client.py  errors.py  models.py  webhooks.py
adapters/github-adapter/python-sdk/tests/: test_sdk.py
docs/: agent-recipes.md  cloud.md  developer.md  integration-guide.md  mvp-completeness-scorecard.md  quick-start.md  release-sdk-publishing.md  typescript-migration.md
examples/: issue-to-pr-lifecycle.md  self-hosted-task-sources.json  self-hosted-task-store.json
landing/: index-light.html  index.html
landing-next/: package-lock.json  package.json  vercel.json
scripts/: agentrail-e2e-demo.mjs  agentrail-sandbox-smoke.mjs  ls_agents.py  paperclip-issue-update.sh  run-live-sandbox-smoke.sh  smoke-test-python-sdk.sh  smoke-test-sdk-packages.mjs  smoke-test-typescript-sdk.mjs  update-paperclip.sh  verify-npm-package-contents.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/src/agentrail/: __init__.py  client.py  errors.py  models.py  webhooks.py
sdk/python/tests/: test_submit_contract.py
src/: agent-auth-store.js  agent-auth-store.ts  agent-profile-store.ts  agent-run-store.ts  agent-task-queue.js  (+62 more)
(+176 files in other folders)
