[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrail"
version = "0.1.0"
description = "Python SDK for the AgentRail Task Lifecycle API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentrail"]
