[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentrail"
version = "0.1.0"
description = "Python SDK for the AgentRail Task Lifecycle API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "ISC"}
keywords = ["agentrail", "agent", "sdk", "task-lifecycle"]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
include = ["agentrail*"]
